Update description of project

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "xtend/payment",
-    "description": "Payment Module for ZF3",
+    "description": "Payment Module for Indonesian",
     "type": "library",
     "license": "BSD-3-Clause",
     "keywords": [
